# llm_jssp

./: LICENSE  README.md  setup.cfg
.github/workflows/: ci.yaml
llm_jssp/: __init__.py  __main__.py  jssp_skill.py
tests/: test_jssp_with_ortools.py  test_llm.py  test_llm_jssp.py
