[metadata]
name = llm_jssp
version = 0.1.0
description = LLM-based solver of the Job Shop Scheduling Problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreimr/llm_jssp
author = Andrei Rotenstein
author_email = rotenstein.andrei.v+jssp@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    click>=8.1.6
python_requires = >=3.12
include_package_data = True

[options.packages.find]
include = llm_jssp, llm_jssp.*

[options.entry_points]
console_scripts =
    llm_jssp = llm_jssp.__main__:main

[options.extras_require]
testing =
    flake8
    mypy
    pytest

[options.package_data]
llm_jssp = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --verbose
    tests
markers =
    null_feature: mark a test as a placeholder for a feature that is not yet implemented
